--- a/src/AnotherTest.ipynb
+++ b/src/AnotherTest.ipynb
@@ -49,8 +49,9 @@
     }
    ],
    "source": [
-    "df1 = df.loc[0:50]\n",
-    "profile = ProfileReport(df1, title = \"Profile\")\n"
+    "#Grabbing a subset of the data to run through pandas profiling\n",
+    "#df1 = df.loc[0:50]\n",
+    "#profile = ProfileReport(df1, title = \"Profile\")\n"
    ]
   },
   {
@@ -40111,7 +40112,7 @@
     }
    ],
    "source": [
-    "profile.to_notebook_iframe()"
+    "#profile.to_notebook_iframe()"
    ]
   },
   {
