--- a/src/AnotherTest.ipynb
+++ b/src/AnotherTest.ipynb
@@ -2,24 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/apps/software/standard/core/anaconda/2019.10-py3.7/lib/python3.7/site-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-      "  import pandas.util.testing as tm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#import dependencies\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "import json\n",
     "import gzip \n",
-    "from pandas_profiling import ProfileReport"
+    "from pandas_profiling import ProfileReport\n",
+    "from collections import Counter"
    ]
   },
   {
@@ -41032,7 +41025,7 @@
     "#Applying the duplicate function\n",
     "prof['Duplicates'] = df.apply(checkDuplicates)\n",
     "\n",
-    "#Still need to figure out validity "
+    "#Still need to figure out validity  "
    ]
   },
   {
@@ -41085,56 +41078,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/apps/software/standard/core/anaconda/2019.10-py3.7/lib/python3.7/site-packages/ipykernel_launcher.py:9: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  if __name__ == '__main__':\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Question 1: Who are the companies represented in this dataset?\n",
-    "#Embedded for loop algo that returns an array of all the unique company codes for the first 10000 rows of the dataset (Should be able to scale for the whole dataset, but will definetely take a while, so looking for a faster way)\n",
-    "codes = df['company_codes'].head(10000)\n",
-    "\n",
-    "unique = np.array([])\n",
-    "\n",
-    "for key, company in codes.items():\n",
-    "    for co in company.split(\",\"):\n",
-    "        if co not in unique and co != \"\":\n",
-    "            unique = np.append(unique, co)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 9032 companies represented in the first 10000 rows\n"
+      "0          ,toamsi,toamsi,tosmsc,tosmsc,tshba,tshba,tshba,\n",
+      "1                                      ,irevs,irevs,irevs,\n",
+      "2                                                 ,euruno,\n",
+      "3                   ,retrac,nyse,nyse,retrac,retrac,seexc,\n",
+      "4                                   ,brstmy,brstmy,brstmy,\n",
+      "                               ...                        \n",
+      "99995                                        ,seexc,seexc,\n",
+      "99996    ,cntc,usfda,amrcan,cntc,cntc,jjprd,jjprd,usfda...\n",
+      "99997                                ,dynavt,dynavt,seexc,\n",
+      "99998               ,ktphi,ktphi,ktphi,sndoz,sndoz,gilsci,\n",
+      "99999    ,agev,bayepc,monoca,monoca,nasdaq,nasdaq,novap...\n",
+      "Name: company_codes, Length: 100000, dtype: object\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/apps/software/standard/core/anaconda/2019.10-py3.7/lib/python3.7/site-packages/ipykernel_launcher.py:12: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  if sys.path[0] == '':\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Question 1: Who are the companies represented in this dataset?\n",
+    "\n",
+    "#Embedded for loop algo that returns an array of all the unique company codes for the first 100000 rows of the dataset (Should be able to scale for the whole dataset, but will definetely take a while, so looking for a faster way)\n",
+    "codes = df['company_codes'].head(100000)\n",
+    "print(codes)\n",
+    "\n",
+    "#array that will hold all the unique company codes\n",
+    "unique = np.array([])\n",
+    "\n",
+    "for key, company in codes.items():\n",
+    "    for co in company.split(\",\"):\n",
+    "        if co not in unique and co != \"\":\n",
+    "            unique = np.append(unique, co) \n",
+    "\n",
+    "#Create a dataframe for company codes and maybe the actual company name\n",
+    "companies_in_dataset = pd.DataFrame()\n",
+    "companies_in_dataset['Code'] = unique\n",
+    "\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     Code\n",
+      "0  toamsi\n",
+      "1  tosmsc\n",
+      "2   tshba\n",
+      "3   irevs\n",
+      "4  euruno\n",
+      "5  retrac\n",
+      "6    nyse\n",
+      "7   seexc\n",
+      "8  brstmy\n",
+      "9    aknv\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(companies_in_dataset.head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 26757 individual companies represented in the first 100000 rows\n"
      ]
     }
    ],
    "source": [
     "#Question 2: How many companies are represented by these articles?\n",
-    "\n",
-    "print(\"There are {} companies represented in the first 10000 rows\".format(len(unique)))\n",
-    "\n",
-    "\n",
-    "\n"
+    "print(\"There are {} individual companies represented in the first 100000 rows\".format(len(unique)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41142,6 +41185,205 @@
     "my_16 = df[df.columns[0:15]]\n",
     "rest_of_df = df[df.columns[15:]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>company_codes</th>\n",
+       "      <th>company_codes_about</th>\n",
+       "      <th>company_codes_relevance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>,toamsi,toamsi,tosmsc,tosmsc,tshba,tshba,tshba,</td>\n",
+       "      <td>,tshba,</td>\n",
+       "      <td>,tshba,tosmsc,toamsi,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>,irevs,irevs,irevs,</td>\n",
+       "      <td>,irevs,</td>\n",
+       "      <td>,irevs,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>,euruno,</td>\n",
+       "      <td></td>\n",
+       "      <td>,euruno,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>,retrac,nyse,nyse,retrac,retrac,seexc,</td>\n",
+       "      <td>,retrac,</td>\n",
+       "      <td>,seexc,retrac,nyse,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>,brstmy,brstmy,brstmy,</td>\n",
+       "      <td>,brstmy,</td>\n",
+       "      <td>,brstmy,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>,aknv,aknv,crak,crak,</td>\n",
+       "      <td></td>\n",
+       "      <td>,crak,aknv,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>,drred,drred,drred,hhpciz,hhpciz,</td>\n",
+       "      <td>,drred,</td>\n",
+       "      <td>,hhpciz,drred,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>,xtlbio,xtlbio,xtlbio,</td>\n",
+       "      <td>,xtlbio,</td>\n",
+       "      <td>,xtlbio,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>,arseus,arseus,usfda,arseus,</td>\n",
+       "      <td>,arseus,</td>\n",
+       "      <td>,usfda,arseus,</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>,sgthrp,usfda,eumagy,seexc,sgthrp,sgthrp,usfda...</td>\n",
+       "      <td>,usfda,sgthrp,</td>\n",
+       "      <td>,usfda,sgthrp,seexc,eumagy,</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       company_codes company_codes_about  \\\n",
+       "0    ,toamsi,toamsi,tosmsc,tosmsc,tshba,tshba,tshba,             ,tshba,   \n",
+       "1                                ,irevs,irevs,irevs,             ,irevs,   \n",
+       "2                                           ,euruno,                       \n",
+       "3             ,retrac,nyse,nyse,retrac,retrac,seexc,            ,retrac,   \n",
+       "4                             ,brstmy,brstmy,brstmy,            ,brstmy,   \n",
+       "5                              ,aknv,aknv,crak,crak,                       \n",
+       "6                  ,drred,drred,drred,hhpciz,hhpciz,             ,drred,   \n",
+       "7                             ,xtlbio,xtlbio,xtlbio,            ,xtlbio,   \n",
+       "8                       ,arseus,arseus,usfda,arseus,            ,arseus,   \n",
+       "9  ,sgthrp,usfda,eumagy,seexc,sgthrp,sgthrp,usfda...      ,usfda,sgthrp,   \n",
+       "\n",
+       "       company_codes_relevance  \n",
+       "0        ,tshba,tosmsc,toamsi,  \n",
+       "1                      ,irevs,  \n",
+       "2                     ,euruno,  \n",
+       "3          ,seexc,retrac,nyse,  \n",
+       "4                     ,brstmy,  \n",
+       "5                  ,crak,aknv,  \n",
+       "6               ,hhpciz,drred,  \n",
+       "7                     ,xtlbio,  \n",
+       "8               ,usfda,arseus,  \n",
+       "9  ,usfda,sgthrp,seexc,eumagy,  "
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Creating a dataframe that holds the relevance of an article. I am interested in seeing which companies are of high relevance per article\n",
+    "\n",
+    "#company_codes: Individualized codes given to each company mentioned in the article\n",
+    "#company_codes_about: Companies that the article is about; codes in this column have a high relevance to the document\n",
+    "#company_codes_relevance: Companies added to the document because they have a certain degree of relevance to it, ranging from very low to very high(still not sure if the range is highest to lowest, or vice versa)\n",
+    "#\n",
+    "company_data = df[['company_codes', 'company_codes_about', 'company_codes_relevance']]\n",
+    "company_data.head(10)\n",
+    "\n",
+    "#Still confused about the relevance of a company. For instance, row 6 has drred as the main company being talked about in that article,\n",
+    "#but it is second in the company_codes_relevance listing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('usfda,', 29635), ('medinc,', 12379), ('pfiz,', 11543), ('glxo,', 10268), ('brstmy,', 10168), ('lilye,', 10134), ('jonjon,', 9638), ('bosts,', 9151), ('schplo,', 8814), ('abotlb,', 7601)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import operator\n",
+    "#This line of code will allow us to see the number of total times a company or list of companies have been the main topic of the article\n",
+    "counts = Counter(company_data['company_codes_about'].str[1:])\n",
+    "\n",
+    "#For instance, 44 articles exist in the dataset where tshba is the only company that the article is about\n",
+    "\n",
+    "#This query returns back all the articles where tshba is the only company the corresponding article is about\n",
+    "#df[df['company_codes_about'].str[1:] == \"tshba,\"]\n",
+    "\n",
+    "#Here I am taking the counts variable defined above, sorting it by the number of times a company or list of companies have been the main topic of the article\n",
+    "#reversing it so it goes from highest to lowest number of counts, and then getting the top 10 company/companies that are the main focus of the article\n",
+    "sorted_counts = sorted(counts.items(), key = operator.itemgetter(1), reverse = True)\n",
+    "print(sorted_counts[1:11])\n",
+    "\n",
+    "#Here you can see that usfda, medinc, and pfizer are among the most talked about companies in these articles. There are, for instance, 11"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "11543"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df[df['company_codes_about'].str[1:] == \"pfiz,\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
