More Comments and cleaning up a graph

--- a/src/AnotherTest.ipynb
+++ b/src/AnotherTest.ipynb
@@ -41342,6 +41342,7 @@
    ],
    "source": [
     "import operator\n",
+    "#The question I am trying to answer here is: Which company or company pairings occured the most as primary subject matter for these articles?\n",
     "#This line of code will allow us to see the number of total times a company or list of companies have been the main topic of the article\n",
     "counts = Counter(company_data['company_codes_about'].str[1:])\n",
     "\n",
@@ -41351,14 +41352,14 @@
     "#df[df['company_codes_about'].str[1:] == \"tshba,\"]\n",
     "\n",
     "#Here I am taking the counts variable defined above, sorting it by the number of times a company or list of companies have been the main topic of the article\n",
-    "#reversing it so it goes from highest to lowest number of counts, and then getting the top 10 company/companies that are the main focus of the article\n",
+    "#reversing it so it goes from highest to lowest number of counts, and then getting the top 10 company/companies that are the main focus of their respective article\n",
     "sorted_counts = sorted(counts.items(), key = operator.itemgetter(1), reverse = True)\n",
     "print(sorted_counts[1:11])\n",
     "\n",
     "#Here you can see that usfda, medinc, and pfizer are among the most talked about companies in all these articles. \n",
     "#There are, for instance, 11543 articles where pfizer is the only primary subject of the article\n",
     "#Interestingly but perhaps not surprising is that articles where only one company is the focus have the highest representation. \n",
-    "#This makes sense since the raw count of cooccurences of multiple companies would be lower than just a single major company"
+    "#This makes sense since the raw count of cooccurences of multiple companies together would be lower than just a single major company"
    ]
   },
   {
