--- a/src/AnotherTest.ipynb
+++ b/src/AnotherTest.ipynb
@@ -41080,33 +41080,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0          ,toamsi,toamsi,tosmsc,tosmsc,tshba,tshba,tshba,\n",
-      "1                                      ,irevs,irevs,irevs,\n",
-      "2                                                 ,euruno,\n",
-      "3                   ,retrac,nyse,nyse,retrac,retrac,seexc,\n",
-      "4                                   ,brstmy,brstmy,brstmy,\n",
-      "                               ...                        \n",
-      "99995                                        ,seexc,seexc,\n",
-      "99996    ,cntc,usfda,amrcan,cntc,cntc,jjprd,jjprd,usfda...\n",
-      "99997                                ,dynavt,dynavt,seexc,\n",
-      "99998               ,ktphi,ktphi,ktphi,sndoz,sndoz,gilsci,\n",
-      "99999    ,agev,bayepc,monoca,monoca,nasdaq,nasdaq,novap...\n",
-      "Name: company_codes, Length: 100000, dtype: object\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/apps/software/standard/core/anaconda/2019.10-py3.7/lib/python3.7/site-packages/ipykernel_launcher.py:12: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  if sys.path[0] == '':\n"
+      "/apps/software/standard/core/anaconda/2019.10-py3.7/lib/python3.7/site-packages/ipykernel_launcher.py:11: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
+      "  # This is added back by InteractiveShellApp.init_path()\n"
      ]
     }
    ],
@@ -41114,8 +41096,7 @@
     "#Question 1: Who are the companies represented in this dataset?\n",
     "\n",
     "#Embedded for loop algo that returns an array of all the unique company codes for the first 100000 rows of the dataset (Should be able to scale for the whole dataset, but will definetely take a while, so looking for a faster way)\n",
-    "codes = df['company_codes'].head(100000)\n",
-    "print(codes)\n",
+    "codes = df['company_codes']\n",
     "\n",
     "#array that will hold all the unique company codes\n",
     "unique = np.array([])\n",
