Added a validity function and got unique codes for each company column

--- a/src/AnotherTest.ipynb
+++ b/src/AnotherTest.ipynb
@@ -41393,27 +41393,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Index(['copyright', 'subject_codes', 'art', 'modification_datetime', 'body',\n",
-       "       'company_codes_occur', 'company_codes_about', 'company_codes_lineage',\n",
-       "       'snippet', 'publication_date', 'market_index_codes', 'credit',\n",
-       "       'currency_codes', 'region_of_origin', 'ingestion_datetime',\n",
-       "       'modification_date', 'source_name', 'language_code', 'region_codes',\n",
-       "       'company_codes_association', 'person_codes', 'byline',\n",
-       "       'company_codes_relevance', 'source_code', 'an', 'word_count',\n",
-       "       'company_codes', 'industry_codes', 'title', 'publication_datetime',\n",
-       "       'publisher_name', 'action', 'document_type', 'section', 'dateline'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'numpy.int64'>\n"
+     ]
     }
    ],
    "source": [
@@ -41521,75 +41509,158 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 228,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/apps/software/standard/core/anaconda/2019.10-py3.7/lib/python3.7/site-packages/ipykernel_launcher.py:10: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  # Remove the CWD from sys.path while we load stuff.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['toamsi' 'tosmsc' 'tshba' ... 'slcuti' 'cbsh' 'slakep']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#getting a subset of the comapnies \n",
-    "subset = companies.iloc[0:10000]\n",
-    "unique_companies = np.array([])\n",
+    "#Unique companies from company_codes\n",
+    "unique_companies = set()\n",
     "\n",
-    "for key,value in subset['company_codes'].items():\n",
-    "    for co in value.split(\",\"):\n",
-    "        if co not in unique_companies and co != \"\":\n",
-    "            unique_companies = np.append(unique_companies, co)\n",
-    "    \n"
+    "for value in df['company_codes']: \n",
+    "    unique_companies.update(value.split(\",\"))\n",
+    "\n",
+    "unique_companies = list(unique_companies)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = pd.DataFrame({\"Code\": [\"toamsi\", \"cbsh\", \"tshba\", \"fdfe\"]})"
+    "#Unique companies from company_codes_occur\n",
+    "unique_companies_occur = set()\n",
+    "\n",
+    "for value in df['company_codes_occur']:\n",
+    "    unique_companies_occur.update(value.split(\",\"))\n",
+    "\n",
+    "unique_companies_occur = list(unique_companies_occur)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df"
+    "#unique companies from company_codes_about\n",
+    "unique_companies_about = set()\n",
+    "\n",
+    "for value in df['company_codes_about']:\n",
+    "    unique_companies_about.update(value.split(\",\"))\n",
+    "\n",
+    "unique_companies_about = list(unique_companies_about)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00033215234720992027\n"
+      "['cycu', 'dbcsnmp', 'mchtcu', 'hccins', 'wrchl', 'skdmru', 'mdcxfd', 'zzg', 'bokgac', 'mnotec', 'armpkh', 'wincan', 'hqjeej', 'wlmrdn', 'oaslng', 'nanosn', 'kkrrea', 'yesto', 'candmc']\n"
      ]
     }
    ],
    "source": [
-    "num_valid = 0\n",
-    "for key, company in df.Code.items(): #but instead it would be dictionary.code.items()\n",
-    "    if company in unique_companies: #ideally this unique_companies would have all of the unique companies \n",
-    "        num_valid += 1\n",
+    "#unique companies from company_codes_relevance\n",
+    "unique_companies_relevance = set()\n",
     "\n",
-    "print(num_valid / len(unique_companies))"
+    "for value in df['company_codes_relevance']:\n",
+    "    unique_companies_relevance.update(value.split(\",\"))\n",
+    "\n",
+    "unique_companies_relevance = list(unique_companies_relevance)\n",
+    "print(unique_companies_relevance[1:20])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cvbfin', 'ntsmat', 'qavfmg', 'pbepal', 'perhud', 'semgl', 'pulmou', 'krnfry', 'bfnnsp']\n"
+     ]
+    }
+   ],
+   "source": [
+    "#unique companies from company_codes_lineage\n",
+    "unique_companies_lineage = set()\n",
+    "\n",
+    "for value in df['company_codes_lineage']:\n",
+    "    unique_companies_lineage.update(value.split(\",\"))\n",
+    "\n",
+    "unique_companies_lineage = list(unique_companies_lineage)\n",
+    "print(unique_companies_lineage[1:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n#unique companies from company_codes_association\\nunique_companies_association = set()\\n\\nfor value in df[\\'company_codes_association\\']:\\n    unique_companies_association.update(value.split(\",\"))\\n\\nunique_companies_association = list(unique_companies_association)\\nprint(df.iloc[0:1000][\\'company_codes_association\\'])\\n'"
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "#unique companies from company_codes_association\n",
+    "unique_companies_association = set()\n",
+    "\n",
+    "for value in df['company_codes_association']:\n",
+    "    unique_companies_association.update(value.split(\",\"))\n",
+    "\n",
+    "unique_companies_association = list(unique_companies_association)\n",
+    "print(df.iloc[0:1000]['company_codes_association'])\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cycu', 'dbcsnmp', 'wmiof']\n",
+      "3\n",
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "practice = pd.DataFrame({\"Code\": ['cycu', 'dbcsnmp', 'wmiof'], \"Company\": [\"A\", \"B\", \"C\"]})\n",
+    "\n",
+    "print(unique_companies[1:4])\n",
+    "\n",
+    "def checkValidity(ls, col):\n",
+    "    num_valid = 0\n",
+    "    for company in ls:\n",
+    "        if company in col.tolist():\n",
+    "            num_valid += 1\n",
+    "    print(num_valid)\n",
+    "    return num_valid / len(ls)\n",
+    "\n",
+    "print(checkValidity(unique_companies[1:4], practice.Code))\n",
+    "            \n"
    ]
   },
   {
@@ -41611,19 +41682,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Trying to get the table that devika emailed about\n",
     "\n",
     "#looking at a tiny portion of the data\n",
-    "sub = df.head(20)[['publisher_name', 'company_codes_relevance']]"
+    "sub = df.head(2000)[['publisher_name', 'company_codes_relevance']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41634,7 +41705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41644,226 +41715,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "publisher_name                                   Company_code\n",
-       "Athena Information Solutions Pvt. Ltd.           usfda           2\n",
-       "                                                 abvbba          1\n",
-       "                                                 boehig          1\n",
-       "                                                 nqdeps          1\n",
-       "                                                 ntnct           1\n",
-       "                                                                ..\n",
-       "The Advisory Board Company/American Health Line  usfda           1\n",
-       "Thomson Reuters (Markets) LLC                    drred           1\n",
-       "                                                 hhpciz          1\n",
-       "iCrowdNewswire, LLC                              aknv            1\n",
-       "                                                 crak            1\n",
-       "Name: Company_code, Length: 64, dtype: int64"
-      ]
-     },
-     "execution_count": 194,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "publisher_name                       Company_code\n",
+      "A.H. Belo Management Services, Inc.  ivkhff          1\n",
+      "                                     txscn           1\n",
+      "ADI Media Pvt. Ltd.                  bekman          1\n",
+      "                                     biomer          1\n",
+      "                                     hofman          1\n",
+      "                                                    ..\n",
+      "news aktuell GmbH                    rdrsdz          1\n",
+      "                                     seexc           1\n",
+      "                                     shiph           1\n",
+      "                                     usnih           1\n",
+      "                                     vrphrm          1\n",
+      "Name: Company_code, Length: 4486, dtype: int64\n"
+     ]
     }
    ],
    "source": [
     "new_df = new_df.sort_values(\"publisher_name\")\n",
-    "new_df.groupby(\"publisher_name\")['Company_code'].value_counts()"
+    "co_and_pub = new_df.groupby(\"publisher_name\")['Company_code'].value_counts()\n",
+    "print(str(co_and_pub))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>publisher_name</th>\n",
-       "      <th>company_codes_relevance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>NewsRx.com</td>\n",
-       "      <td>,tshba,tosmsc,toamsi,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>The Advisory Board Company/American Health Line</td>\n",
-       "      <td>,irevs,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>NewsRx.com</td>\n",
-       "      <td>,euruno,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>NewsRX, LLC</td>\n",
-       "      <td>,seexc,retrac,nyse,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>NewsRX, LLC</td>\n",
-       "      <td>,brstmy,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>iCrowdNewswire, LLC</td>\n",
-       "      <td>,crak,aknv,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Thomson Reuters (Markets) LLC</td>\n",
-       "      <td>,hhpciz,drred,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Athena Information Solutions Pvt. Ltd.</td>\n",
-       "      <td>,xtlbio,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>NASDAQ OMX Corporate Solutions International L...</td>\n",
-       "      <td>,usfda,arseus,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Business Wire, Inc.</td>\n",
-       "      <td>,usfda,sgthrp,seexc,eumagy,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>Gannett Co., Inc. - Newspaper Division</td>\n",
-       "      <td>,usfda,jonjon,jjprd,actsws,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>NewsRX, LLC</td>\n",
-       "      <td>,tkdci,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Dow Jones &amp; Company, Inc.</td>\n",
-       "      <td>,seexc,nasdaq,hltacq,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>Athena Information Solutions Pvt. Ltd.</td>\n",
-       "      <td>,usfda,boehig,abvbba,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>Normans Media Ltd</td>\n",
-       "      <td>,usfda,onclbt,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>Athena Information Solutions Pvt. Ltd.</td>\n",
-       "      <td>,usfda,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>The Advisory Board Company/American Health Line</td>\n",
-       "      <td>,usfda,uscead,uhelc,samhsa,hmana,dnatcd,congen...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Electronic News Publishing Ltd.</td>\n",
-       "      <td>,vsuals,usleep,usfda,thjuhs,thjffu,seexc,nslij...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Athena Information Solutions Pvt. Ltd.</td>\n",
-       "      <td>,twnit,rsuvmc,ntnct,nqdeps,</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>News Bites Pty Ltd (Europe)</td>\n",
-       "      <td>,ucberk,prnuni,nasdaq,illmna,iaolsi,clfitg,ama...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                       publisher_name  \\\n",
-       "0                                          NewsRx.com   \n",
-       "1     The Advisory Board Company/American Health Line   \n",
-       "2                                          NewsRx.com   \n",
-       "3                                         NewsRX, LLC   \n",
-       "4                                         NewsRX, LLC   \n",
-       "5                                 iCrowdNewswire, LLC   \n",
-       "6                       Thomson Reuters (Markets) LLC   \n",
-       "7              Athena Information Solutions Pvt. Ltd.   \n",
-       "8   NASDAQ OMX Corporate Solutions International L...   \n",
-       "9                                 Business Wire, Inc.   \n",
-       "10             Gannett Co., Inc. - Newspaper Division   \n",
-       "11                                        NewsRX, LLC   \n",
-       "12                          Dow Jones & Company, Inc.   \n",
-       "13             Athena Information Solutions Pvt. Ltd.   \n",
-       "14                                  Normans Media Ltd   \n",
-       "15             Athena Information Solutions Pvt. Ltd.   \n",
-       "16    The Advisory Board Company/American Health Line   \n",
-       "17                    Electronic News Publishing Ltd.   \n",
-       "18             Athena Information Solutions Pvt. Ltd.   \n",
-       "19                        News Bites Pty Ltd (Europe)   \n",
-       "\n",
-       "                              company_codes_relevance  \n",
-       "0                               ,tshba,tosmsc,toamsi,  \n",
-       "1                                             ,irevs,  \n",
-       "2                                            ,euruno,  \n",
-       "3                                 ,seexc,retrac,nyse,  \n",
-       "4                                            ,brstmy,  \n",
-       "5                                         ,crak,aknv,  \n",
-       "6                                      ,hhpciz,drred,  \n",
-       "7                                            ,xtlbio,  \n",
-       "8                                      ,usfda,arseus,  \n",
-       "9                         ,usfda,sgthrp,seexc,eumagy,  \n",
-       "10                        ,usfda,jonjon,jjprd,actsws,  \n",
-       "11                                            ,tkdci,  \n",
-       "12                              ,seexc,nasdaq,hltacq,  \n",
-       "13                              ,usfda,boehig,abvbba,  \n",
-       "14                                     ,usfda,onclbt,  \n",
-       "15                                            ,usfda,  \n",
-       "16  ,usfda,uscead,uhelc,samhsa,hmana,dnatcd,congen...  \n",
-       "17  ,vsuals,usleep,usfda,thjuhs,thjffu,seexc,nslij...  \n",
-       "18                        ,twnit,rsuvmc,ntnct,nqdeps,  \n",
-       "19  ,ucberk,prnuni,nasdaq,illmna,iaolsi,clfitg,ama...  "
-      ]
-     },
-     "execution_count": 195,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sub"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
