--- a/src/CompanyValidity.ipynb
+++ b/src/CompanyValidity.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "company_codes_relevance       0.0"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,31 +158,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Here is the validity function I will be using\n",
     "#For every valid company code in the dataset, num_valid is incremented by 1. At the end that number is divided by all the length\n",
     "#of the entire unique list to get a decimal\n",
-    "def checkValidity(ls, col):\n",
-    "    num_valid = 0\n",
-    "    for company in ls:\n",
-    "        if company in col.tolist():\n",
-    "            num_valid += 1\n",
-    "    return num_valid / len(ls)"
+    "def checkValidity(ls, col = code_dict.code.tolist()):\n",
+    "    return sum([code in col for code in ls]) / len(ls)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['uvbgdy', 'conun', 'nrph', 'rsmnnd', 'vrtj', 'vvvit', 'cncn', 'nstrci', 'piagci', 'fndcll']\n",
+      "['CDRL', 'RKIMSY', 'BDORF', 'CESUKL', 'SKLJEQ', 'JAPLLC', 'BIONZU', 'UWJYAB', 'CRSUPZ', 'AUBSPL']\n",
       "There are 73688 unique company codes\n"
      ]
     }
@@ -196,20 +192,21 @@
     "#Convert set back to list\n",
     "unique_company_codes = list(unique_company_codes)\n",
     "unique_company_codes = unique_company_codes[1:] #The first element was '', so I didn't include it in the final list\n",
+    "unique_company_codes = [word.upper() for word in unique_company_codes]\n",
     "print(unique_company_codes[0:10])\n",
     "print(\"There are {} unique company codes\".format(len(unique_company_codes)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['uvbgdy', 'conun', 'nrph', 'rsmnnd', 'vrtj', 'vvvit', 'cncn', 'nstrci', 'piagci', 'fndcll']\n",
+      "['BDORF', 'CESUKL', 'SKLJEQ', 'JAPLLC', 'BIONZU', 'UWJYAB', 'CRSUPZ', 'AUBSPL', 'NTADSC', 'FLAFRA']\n",
       "There are 62381 unique companies in unique_companies_occur\n"
      ]
     }
@@ -223,21 +220,21 @@
     "\n",
     "unique_companies_occur = list(unique_companies_occur)\n",
     "unique_companies_occur = unique_companies_occur[1:]\n",
-    "\n",
+    "unique_companies_occur = [word.upper() for word in unique_companies_occur]\n",
     "print(unique_companies_occur[0:10])\n",
     "print(\"There are {} unique companies in unique_companies_occur\".format(len(unique_companies_occur))) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['uvbgdy', 'conun', 'nrph', 'vrtj', 'cncn', 'nstrci', 'amexpr', 'nsisof', 'amphma', 'wngfrt']\n",
+      "['SKLJEQ', 'BIONZU', 'CRSUPZ', 'IPENIP', 'NTADSC', 'FLAFRA', 'PRZACL', 'RALDRG', 'GZMMOL', 'CIRPA']\n",
       "There are 30780 unique companies in unique_companies_about\n"
      ]
     }
@@ -251,7 +248,7 @@
     "\n",
     "unique_companies_about = list(unique_companies_about)\n",
     "unique_companies_about = unique_companies_about[1:]\n",
-    "\n",
+    "unique_companies_about = [word.upper() for word in unique_companies_about]\n",
     "print(unique_companies_about[0:10])\n",
     "print(\"There are {} unique companies in unique_companies_about\".format(len(unique_companies_about)))"
    ]
@@ -286,14 +283,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['invtgn', 'cazen', 'hypaqp', 'nxcp', 'ganinc', 'frazco', 'albers', 'rgpcf', 'hunhal', 'ccpllc']\n",
+      "['CHNLIB', 'KTZEN', 'DYNTL', 'ISTHMA', 'BXRGRP', 'ZFPZUR', 'UNNATF', 'RCNGYI', 'LEETH', 'SASILI']\n",
       "There are 3467 unique companies in unique_companies_lineage\n"
      ]
     }
@@ -307,9 +304,314 @@
     "\n",
     "unique_companies_lineage = list(unique_companies_lineage)\n",
     "unique_companies_lineage = unique_companies_lineage[1:]\n",
+    "\n",
+    "#Convert to uppercase bc data dictionary has all codes in upper case\n",
+    "unique_companies_lineage = [word.upper() for word in unique_companies_lineage]\n",
     "print(unique_companies_lineage[0:10])\n",
     "print(\"There are {} unique companies in unique_companies_lineage\".format(len(unique_companies_lineage)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Uploading the data dictionary into a dataframe\n",
+    "code_dict = pd.read_csv(\"../data/original/Company Codes Dictionary.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(checkValidity(unique_companies_lineage))\n",
+    "profile.iloc[3] = checkValidity(unique_companies_lineage)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.iloc[0] = checkValidity(unique_company_codes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.iloc[2] = checkValidity(unique_companies_about)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profile.iloc[1] = checkValidity(unique_companies_occur)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1048570</th>\n",
+       "      <td>KWGMA</td>\n",
+       "      <td>Kawagoeshi Ishikai General Inc. Association</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048571</th>\n",
+       "      <td>KWGNG</td>\n",
+       "      <td>Kondor Wessels Grundstücksverwaltung NRW GmbH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048572</th>\n",
+       "      <td>KWGNII</td>\n",
+       "      <td>Innodel SA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048573</th>\n",
+       "      <td>KWGOL</td>\n",
+       "      <td>Kwik Goal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048574</th>\n",
+       "      <td>KWGOL</td>\n",
+       "      <td>Kwik Goal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           code                                    description\n",
+       "1048570   KWGMA    Kawagoeshi Ishikai General Inc. Association\n",
+       "1048571   KWGNG  Kondor Wessels Grundstücksverwaltung NRW GmbH\n",
+       "1048572  KWGNII                                     Innodel SA\n",
+       "1048573   KWGOL                                      Kwik Goal\n",
+       "1048574   KWGOL                                      Kwik Goal"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "code_dict.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Validity</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>company_codes</th>\n",
+       "      <td>0.445799</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_occur</th>\n",
+       "      <td>0.458890</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_about</th>\n",
+       "      <td>0.508415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_lineage</th>\n",
+       "      <td>0.516873</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>company_codes_relevance</th>\n",
+       "      <td>0.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                         Validity\n",
+       "company_codes            0.445799\n",
+       "company_codes_occur      0.458890\n",
+       "company_codes_about      0.508415\n",
+       "company_codes_lineage    0.516873\n",
+       "company_codes_relevance  0.000000"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "profile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1048570</th>\n",
+       "      <td>KWGMA</td>\n",
+       "      <td>Kawagoeshi Ishikai General Inc. Association</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048571</th>\n",
+       "      <td>KWGNG</td>\n",
+       "      <td>Kondor Wessels Grundstücksverwaltung NRW GmbH</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048572</th>\n",
+       "      <td>KWGNII</td>\n",
+       "      <td>Innodel SA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048573</th>\n",
+       "      <td>KWGOL</td>\n",
+       "      <td>Kwik Goal</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1048574</th>\n",
+       "      <td>KWGOL</td>\n",
+       "      <td>Kwik Goal</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           code                                    description\n",
+       "1048570   KWGMA    Kawagoeshi Ishikai General Inc. Association\n",
+       "1048571   KWGNG  Kondor Wessels Grundstücksverwaltung NRW GmbH\n",
+       "1048572  KWGNII                                     Innodel SA\n",
+       "1048573   KWGOL                                      Kwik Goal\n",
+       "1048574   KWGOL                                      Kwik Goal"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "code_dict.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1048575, 2)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "code_dict.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
